// ============================================================
// KINGDOM LIBRARY SYSTEM — Prisma Schema
// Source of truth: prisma/schema.dbml + APP_DOC.md + RULES.md
// Rules:
//   - No static enums for business data → dynamic tables
//   - UUID primary keys everywhere
//   - createdAt + updatedAt on every table
//   - deletedAt + deletedBy for soft deletes
//   - Indexes on all searchable / FK fields
// ============================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================================
// ROLES & PERMISSIONS
// ============================================================

model Role {
  id          String   @id @default(uuid())
  name        String   @unique
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  deletedAt   DateTime?
  deletedBy   String?

  users       User[]
  permissions RolePermission[]

  @@index([name])
  @@map("roles")
}

model Permission {
  id          String   @id @default(uuid())
  name        String   @unique   // e.g. "publication:create"
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  deletedAt   DateTime?

  roles       RolePermission[]

  @@index([name])
  @@map("permissions")
}

model RolePermission {
  id           String     @id @default(uuid())
  roleId       String
  permissionId String
  createdAt    DateTime   @default(now())

  role         Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission   Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@unique([roleId, permissionId])
  @@index([roleId])
  @@index([permissionId])
  @@map("role_permissions")
}

// ============================================================
// USERS & AUTHENTICATION
// ============================================================

model User {
  id            String    @id @default(uuid())
  firstName     String
  lastName      String
  email         String    @unique
  phone         String?
  password      String
  profileImage  String?
  bio           String?
  language      String    @default("en")
  emailVerified Boolean   @default(false)
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  deletedAt     DateTime?
  deletedBy     String?

  roleId        String
  role          Role          @relation(fields: [roleId], references: [id])
  status        String        @default("active") // FK-like: active | suspended | archived

  // Auth
  refreshTokens    RefreshToken[]
  twoFactorEnabled Boolean        @default(false)
  twoFactorSecret  String?
  sessions         UserSession[]

  // Library
  borrows          Borrow[]
  reservations     Reservation[]
  inventoryLogs    InventoryLog[]

  // Publishing
  publicationContribs PublicationContributor[]

  // E-Learning
  enrollments      Enrollment[]
  lessonCompletions LessonCompletion[]
  quizResults      QuizResult[]
  examSubmissions  ExamSubmission[]
  certificates     Certificate[]

  // Research
  researchMembers  ResearchProjectMember[]
  researchPapers   ResearchPaper[]

  // Courses created
  courses          Course[]

  // KCS
  userScrolls      UserScroll[]

  // AI
  aiConversations  AiConversation[]
  userInteractions UserInteraction[]

  // Notifications
  notifications    Notification[]

  // Audit
  auditLogs        AuditLog[]

  @@index([email])
  @@index([roleId])
  @@index([status])
  @@map("users")
}

model RefreshToken {
  id        String   @id @default(uuid())
  token     String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("refresh_tokens")
}

model UserSession {
  id           String   @id @default(uuid())
  ipAddress    String?
  userAgent    String?
  device       String?
  os           String?
  browser      String?
  location     String?
  lastActiveAt DateTime @default(now())
  createdAt    DateTime @default(now())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("user_sessions")
}

// ============================================================
// SETTINGS
// ============================================================

model Setting {
  id        String   @id @default(uuid())
  key       String   @unique
  value     Json
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([key])
  @@map("settings")
}

// ============================================================
// CATEGORIES & TAGS
// ============================================================

model Category {
  id        String    @id @default(uuid())
  name      Json      // { en: "...", fr: "...", rw: "..." }
  slug      String    @unique
  parentId  String?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?
  deletedBy String?

  parent    Category?  @relation("CategoryParent", fields: [parentId], references: [id])
  children  Category[] @relation("CategoryParent")
  resources Resource[]
  courses   Course[]

  @@index([slug])
  @@index([parentId])
  @@map("categories")
}

model Tag {
  id        String    @id @default(uuid())
  name      Json      // { en: "...", fr: "...", rw: "..." }
  slug      String    @unique
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  resourceTags ResourceTag[]

  @@index([slug])
  @@map("tags")
}

// ============================================================
// RESOURCE TYPES & FORMATS  (dynamic — no static enums)
// ============================================================

model ResourceType {
  id        String     @id @default(uuid())
  name      String     @unique  // "book" | "ebook" | "journal" | "magazine" | "audio" | "video"
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  resources Resource[]

  @@map("resource_types")
}

model ResourceFormat {
  id        String     @id @default(uuid())
  name      String     @unique  // "physical" | "digital"
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  resources Resource[]

  @@map("resource_formats")
}

// ============================================================
// RESOURCES
// ============================================================

model Resource {
  id                String    @id @default(uuid())
  title             String
  description       String
  author            String
  publisher         String?
  isbn              String?   @unique
  publicationYear   Int?
  totalQuantity     Int       @default(0)
  availableQuantity Int       @default(0)
  coverImageUrl     String?
  fileUrl           String?
  fileMimeType      String?
  allowDownload     Boolean   @default(false)
  status            String    @default("available") // available | archived | out_of_stock
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt
  deletedAt         DateTime?
  deletedBy         String?

  categoryId String?
  category   Category?      @relation(fields: [categoryId], references: [id])
  typeId     String
  type       ResourceType   @relation(fields: [typeId], references: [id])
  formatId   String
  format     ResourceFormat @relation(fields: [formatId], references: [id])

  tags          ResourceTag[]
  borrows       Borrow[]
  reservations  Reservation[]
  inventoryLogs InventoryLog[]
  views         ResourceView[]

  @@index([title])
  @@index([author])
  @@index([isbn])
  @@index([status])
  @@index([categoryId])
  @@map("resources")
}

model ResourceTag {
  id         String   @id @default(uuid())
  resourceId String
  tagId      String
  createdAt  DateTime @default(now())

  resource Resource @relation(fields: [resourceId], references: [id], onDelete: Cascade)
  tag      Tag      @relation(fields: [tagId], references: [id], onDelete: Cascade)

  @@unique([resourceId, tagId])
  @@index([resourceId])
  @@index([tagId])
  @@map("resource_tags")
}

model InventoryLog {
  id         String   @id @default(uuid())
  quantity   Int
  reason     String
  createdAt  DateTime @default(now())

  resourceId String
  resource   Resource @relation(fields: [resourceId], references: [id], onDelete: Cascade)
  changedById String?
  changedBy  User?    @relation(fields: [changedById], references: [id])

  @@index([resourceId])
  @@map("inventory_logs")
}

// ============================================================
// BORROWING & RESERVATIONS
// ============================================================

model Borrow {
  id           String    @id @default(uuid())
  borrowDate   DateTime  @default(now())
  dueDate      DateTime
  returnDate   DateTime?
  renewalCount Int       @default(0)
  maxRenewals  Int       @default(2)
  status       String    @default("pending") // pending | approved | rejected | active | returned | overdue
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  userId       String
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  resourceId   String
  resource     Resource @relation(fields: [resourceId], references: [id], onDelete: Cascade)
  approvedById String?
  approvedBy   User?    @relation("BorrowApprovedBy", fields: [approvedById], references: [id])
  fine         Fine?

  @@index([userId])
  @@index([resourceId])
  @@index([status])
  @@index([userId, status])
  @@map("borrows")
}

model Reservation {
  id              String    @id @default(uuid())
  queuePosition   Int
  reservationDate DateTime  @default(now())
  notifiedAt      DateTime?
  claimDeadline   DateTime?
  status          String    @default("pending") // pending | notified | claimed | expired | cancelled
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  userId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  resourceId String
  resource   Resource @relation(fields: [resourceId], references: [id], onDelete: Cascade)

  @@unique([userId, resourceId])
  @@index([userId])
  @@index([resourceId])
  @@index([status])
  @@map("reservations")
}

model Fine {
  id          String    @id @default(uuid())
  daysOverdue Int
  amount      Decimal
  status      String    @default("unpaid") // unpaid | paid | waived
  paidAt      DateTime?
  waivedById  String?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  borrowId String @unique
  borrow   Borrow @relation(fields: [borrowId], references: [id], onDelete: Cascade)

  @@map("fines")
}

// ============================================================
// PUBLISHING
// ============================================================

model Publication {
  id            String    @id @default(uuid())
  title         String
  description   String
  language      String
  coverImageUrl String?
  fileUrl       String?
  reviewNotes   String?
  featured      Boolean   @default(false)
  status        String    @default("draft") // draft | submitted | under_review | approved | rejected | published
  submissionDate DateTime @default(now())
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  deletedAt     DateTime?
  deletedBy     String?

  categoryId String?
  category   Category? @relation(fields: [categoryId], references: [id])

  contributors  PublicationContributor[]
  revenueShares RevenueShare[]
  transactions  Transaction[]

  @@index([status])
  @@index([categoryId])
  @@map("publications")
}

model PublicationContributor {
  id               String  @id @default(uuid())
  contributionRole String  @default("author") // author | co-author | editor
  createdAt        DateTime @default(now())

  publicationId String
  publication   Publication @relation(fields: [publicationId], references: [id], onDelete: Cascade)
  userId        String
  user          User        @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([publicationId, userId])
  @@index([publicationId])
  @@index([userId])
  @@map("publication_contributors")
}

model RevenueShare {
  id               String   @id @default(uuid())
  contributorShare Decimal  // percentage e.g. 70.00
  platformShare    Decimal  // percentage e.g. 30.00
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  publicationId String
  publication   Publication @relation(fields: [publicationId], references: [id], onDelete: Cascade)

  @@index([publicationId])
  @@map("revenue_shares")
}

model Transaction {
  id        String   @id @default(uuid())
  amount    Decimal
  currency  String   @default("RWF")
  method    String   // mobile_money | card | bank_transfer
  status    String   @default("pending") // pending | completed | failed | refunded
  reference String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  publicationId String?
  publication   Publication? @relation(fields: [publicationId], references: [id])
  buyerId       String?
  buyer         User?        @relation("TransactionBuyer", fields: [buyerId], references: [id])

  @@index([publicationId])
  @@index([buyerId])
  @@index([status])
  @@map("transactions")
}

// ============================================================
// E-LEARNING
// ============================================================

model Course {
  id                 String    @id @default(uuid())
  title              String
  description        String
  language           String    @default("en")
  coverImage         String?
  status             String    @default("draft") // draft | published | archived
  prerequisiteCourseId String?
  createdAt          DateTime  @default(now())
  updatedAt          DateTime  @updatedAt
  deletedAt          DateTime?
  deletedBy          String?

  categoryId    String?
  category      Category? @relation(fields: [categoryId], references: [id])
  contributorId String
  contributor   User      @relation(fields: [contributorId], references: [id], onDelete: Cascade)

  prerequisite Course?  @relation("CoursePrerequisite", fields: [prerequisiteCourseId], references: [id])
  dependents   Course[] @relation("CoursePrerequisite")

  lessons     Lesson[]
  enrollments Enrollment[]
  quizzes     Quiz[]
  exams       Exam[]
  certificates Certificate[]

  @@index([status])
  @@index([contributorId])
  @@index([categoryId])
  @@map("courses")
}

model Lesson {
  id           String    @id @default(uuid())
  title        String
  content      String
  contentType  String    // text | video | file
  orderIndex   Int
  durationMins Int?
  isPreview    Boolean   @default(false)
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  courseId String
  course   Course @relation(fields: [courseId], references: [id], onDelete: Cascade)

  completions LessonCompletion[]

  @@index([courseId])
  @@map("lessons")
}

model LessonCompletion {
  id          String   @id @default(uuid())
  completedAt DateTime @default(now())

  userId   String
  user     User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  lessonId String
  lesson   Lesson @relation(fields: [lessonId], references: [id], onDelete: Cascade)

  @@unique([userId, lessonId])
  @@index([userId])
  @@index([lessonId])
  @@map("lesson_completions")
}

model Enrollment {
  id         String   @id @default(uuid())
  progress   Int      @default(0)
  status     String   @default("active") // active | completed | dropped
  enrolledAt DateTime @default(now())
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  userId   String
  user     User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  courseId String
  course   Course @relation(fields: [courseId], references: [id], onDelete: Cascade)

  @@unique([userId, courseId])
  @@index([userId])
  @@index([courseId])
  @@map("enrollments")
}

model Quiz {
  id         String   @id @default(uuid())
  title      String
  totalMarks Int
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  courseId  String
  course    Course     @relation(fields: [courseId], references: [id], onDelete: Cascade)
  questions Question[]
  results   QuizResult[]

  @@index([courseId])
  @@map("quizzes")
}

model Question {
  id           String   @id @default(uuid())
  questionText String
  type         String   // mcq | open
  marks        Int
  options      Json?    // [{text, isCorrect}] for MCQ
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  quizId String
  quiz   Quiz   @relation(fields: [quizId], references: [id], onDelete: Cascade)

  @@index([quizId])
  @@map("questions")
}

model QuizResult {
  id          String   @id @default(uuid())
  score       Int
  grade       String?
  status      String   @default("auto_graded") // auto_graded | pending_review | reviewed
  submittedAt DateTime @default(now())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  quizId String
  quiz   Quiz   @relation(fields: [quizId], references: [id], onDelete: Cascade)

  @@unique([userId, quizId])
  @@index([userId])
  @@index([quizId])
  @@map("quiz_results")
}

model Exam {
  id              String   @id @default(uuid())
  title           String
  totalMarks      Int
  durationMinutes Int
  startWindow     DateTime?
  endWindow       DateTime?
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  courseId    String
  course      Course          @relation(fields: [courseId], references: [id], onDelete: Cascade)
  submissions ExamSubmission[]

  @@index([courseId])
  @@map("exams")
}

model ExamSubmission {
  id          String   @id @default(uuid())
  answers     Json
  score       Int?
  submittedAt DateTime @default(now())
  gradedAt    DateTime?

  examId String
  exam   Exam   @relation(fields: [examId], references: [id], onDelete: Cascade)
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([examId, userId])
  @@index([examId])
  @@index([userId])
  @@map("exam_submissions")
}

model Certificate {
  id               String   @id @default(uuid())
  verificationCode String   @unique @default(uuid())
  issuedAt         DateTime @default(now())

  userId   String
  user     User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  courseId String
  course   Course @relation(fields: [courseId], references: [id], onDelete: Cascade)

  @@unique([userId, courseId])
  @@index([userId])
  @@index([courseId])
  @@map("certificates")
}

// ============================================================
// RESEARCH
// ============================================================

model ResearchProject {
  id          String    @id @default(uuid())
  title       String
  description String
  type        String
  startDate   DateTime
  endDate     DateTime?
  status      String    @default("active") // active | completed | suspended
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  deletedAt   DateTime?
  deletedBy   String?

  members ResearchProjectMember[]
  papers  ResearchPaper[]

  @@index([status])
  @@map("research_projects")
}

model ResearchProjectMember {
  id        String   @id @default(uuid())
  role      String   @default("researcher") // lead | researcher | contributor
  createdAt DateTime @default(now())

  projectId String
  project   ResearchProject @relation(fields: [projectId], references: [id], onDelete: Cascade)
  userId    String
  user      User            @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([projectId, userId])
  @@index([projectId])
  @@index([userId])
  @@map("research_project_members")
}

model ResearchPaper {
  id              String    @id @default(uuid())
  title           String
  abstract        String
  keywords        Json      // string[]
  fileUrl         String?
  publicationDate DateTime?
  status          String    @default("draft") // draft | submitted | published
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  projectId     String
  project       ResearchProject @relation(fields: [projectId], references: [id], onDelete: Cascade)
  contributorId String
  contributor   User            @relation(fields: [contributorId], references: [id], onDelete: Cascade)

  @@index([status])
  @@index([projectId])
  @@index([contributorId])
  @@map("research_papers")
}

// ============================================================
// KCS — Kingdom Classification System
// Source: KCS_LIBRARY.md
// ============================================================

model KcsSection {
  id          String   @id @default(uuid())
  code        String   @unique  // KCS-FND | KCS-HIS | KCS-WIS | KCS-PRP | KCS-GOS | KCS-ACT | KCS-EPI | KCS-REV
  name        String
  description String?
  orderNumber Int
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  scrolls     Scroll[]
  userScrolls UserScroll[]

  @@map("kcs_sections")
}

model Scroll {
  id          String   @id @default(uuid())
  title       String
  code        String   // Gen | Exo | Ps | Matt | Rev etc.
  purpose     String?
  orderNumber Int
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  sectionId String
  section   KcsSection @relation(fields: [sectionId], references: [id], onDelete: Cascade)

  @@index([sectionId])
  @@map("scrolls")
}

model UserScroll {
  id         String    @id @default(uuid())
  title      String
  content    String
  visibility String    @default("private") // private | public | community
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @updatedAt
  deletedAt  DateTime?
  deletedBy  String?

  userId    String
  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  sectionId String
  section   KcsSection @relation(fields: [sectionId], references: [id])

  @@index([userId])
  @@index([sectionId])
  @@map("user_scrolls")
}

// ============================================================
// AI ASSISTANCE
// ============================================================

model AiConversation {
  id        String   @id @default(uuid())
  question  String
  answer    String
  createdAt DateTime @default(now())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("ai_conversations")
}

model UserInteraction {
  id        String   @id @default(uuid())
  action    String   // viewed | borrowed | enrolled | searched | rated
  entityType String  // resource | course | paper
  entityId  String
  createdAt DateTime @default(now())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([entityType, entityId])
  @@map("user_interactions")
}

// ============================================================
// ANALYTICS
// ============================================================

model ResourceView {
  id       String   @id @default(uuid())
  duration Int?     // seconds
  viewedAt DateTime @default(now())

  userId     String?
  user       User?    @relation(fields: [userId], references: [id])
  resourceId String
  resource   Resource @relation(fields: [resourceId], references: [id], onDelete: Cascade)

  @@index([resourceId])
  @@index([userId])
  @@map("resource_views")
  // NOTE: high-volume table — insert via BullMQ queue, not synchronously
}

model SearchLog {
  id         String   @id @default(uuid())
  keyword    String
  resultCount Int?
  searchedAt DateTime @default(now())

  userId String?
  user   User?   @relation(fields: [userId], references: [id])

  @@index([userId])
  @@map("search_logs")
  // NOTE: high-volume table — insert via BullMQ queue, not synchronously
}

// ============================================================
// NOTIFICATIONS 
// ============================================================

model Notification {
  id        String   @id @default(uuid())
  title     String
  body      String
  type      String   // email | in_app | push | sms
  event     String   // borrow_approved | due_soon | reservation_available | course_enrolled | publication_approved | payment_success
  isRead    Boolean  @default(false)
  createdAt DateTime @default(now())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([isRead])
  @@index([userId, isRead])
  @@map("notifications")
}

// ============================================================
// AUDIT LOGS
// ============================================================

model AuditLog {
  id        String   @id @default(uuid())
  action    String   // login | logout | password_reset | user_created | role_assigned | borrow_approved | payment_transaction
  entity    String?  // User | Resource | Borrow | Publication
  entityId  String?
  metadata  Json?
  createdAt DateTime @default(now())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([action])
  @@map("audit_logs")
  // NOTE: archive rows older than 90 days via scheduled BullMQ job
}
