//////////////////////////////////////////////////////
// KINGDOM LIBRARY SYSTEM (KLS)
//////////////////////////////////////////////////////

Table roles {
  id uuid [pk]
  name varchar [unique]
  description text

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table permissions {
  id uuid [pk]
  name varchar [unique]
  description text

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table role_permissions {
  id uuid [pk]

  role_id uuid
  permission_id uuid

  created_at timestamp
}

Ref: role_permissions.role_id > roles.id
Ref: role_permissions.permission_id > permissions.id


//////////////////////////////////////////////////////
// USERS
//////////////////////////////////////////////////////

Table users {
  id uuid [pk]

  role_id uuid

  first_name varchar
  last_name varchar

  email varchar [unique]
  phone varchar

  password varchar

  profile_image varchar
  bio text

  language varchar

  email_verified boolean

  status account_status

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Ref: users.role_id > roles.id


//////////////////////////////////////////////////////
// SETTINGS
//////////////////////////////////////////////////////

Table settings {
  id uuid [pk]

  key varchar [unique]
  value json

  created_at timestamp
  updated_at timestamp
}


//////////////////////////////////////////////////////
// CATEGORIES
//////////////////////////////////////////////////////

Table categories {
  id uuid [pk]

  name json
  slug varchar [unique]

  parent_id uuid

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Ref: categories.parent_id > categories.id


Table tags {
  id uuid [pk]

  name json
  slug varchar [unique]

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}


//////////////////////////////////////////////////////
// RESOURCE TYPES
//////////////////////////////////////////////////////

Table resource_types {
  id uuid [pk]

  name varchar [unique]

  created_at timestamp
  updated_at timestamp
}

Table resource_formats {
  id uuid [pk]

  name varchar [unique]

  created_at timestamp
  updated_at timestamp
}


//////////////////////////////////////////////////////
// RESOURCES
//////////////////////////////////////////////////////

Table resources {
  id uuid [pk]

  category_id uuid
  type_id uuid
  format_id uuid

  title varchar
  description text

  author varchar
  publisher varchar

  isbn varchar

  publication_year int

  total_quantity int
  available_quantity int

  cover_image_url varchar
  file_url varchar

  status resource_status

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Ref: resources.category_id > categories.id
Ref: resources.type_id > resource_types.id
Ref: resources.format_id > resource_formats.id


Table resource_tags {
  id uuid [pk]

  resource_id uuid
  tag_id uuid

  created_at timestamp
}

Ref: resource_tags.resource_id > resources.id
Ref: resource_tags.tag_id > tags.id


//////////////////////////////////////////////////////
// INVENTORY LOGS
//////////////////////////////////////////////////////

Table inventory_logs {
  id uuid [pk]

  resource_id uuid

  quantity int

  reason text

  created_at timestamp
}

Ref: inventory_logs.resource_id > resources.id


//////////////////////////////////////////////////////
// BORROWING
//////////////////////////////////////////////////////

Table borrows {
  id uuid [pk]

  user_id uuid
  resource_id uuid

  borrow_date timestamp
  due_date timestamp
  return_date timestamp

  renewal_count int

  status borrow_status

  created_at timestamp
  updated_at timestamp
}

Ref: borrows.user_id > users.id
Ref: borrows.resource_id > resources.id


Table reservations {
  id uuid [pk]

  user_id uuid
  resource_id uuid

  reservation_date timestamp
  claim_deadline timestamp

  status reservation_status

  created_at timestamp
  updated_at timestamp
}

Ref: reservations.user_id > users.id
Ref: reservations.resource_id > resources.id


Table fines {
  id uuid [pk]

  borrow_id uuid [unique]

  days_overdue int
  amount decimal

  paid_at timestamp

  status fine_status

  created_at timestamp
  updated_at timestamp
}

Ref: fines.borrow_id > borrows.id


//////////////////////////////////////////////////////
// PUBLICATIONS
//////////////////////////////////////////////////////

Table publications {
  id uuid [pk]

  title varchar
  description text

  language varchar

  cover_image_url varchar
  file_url varchar

  review_notes text

  status publication_status

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}


Table publication_contributors {
  id uuid [pk]

  publication_id uuid
  user_id uuid

  contribution_role varchar

  created_at timestamp
}

Ref: publication_contributors.publication_id > publications.id
Ref: publication_contributors.user_id > users.id


//////////////////////////////////////////////////////
// COURSES
//////////////////////////////////////////////////////

Table courses {
  id uuid [pk]

  category_id uuid

  title varchar
  description text

  cover_image varchar

  language varchar

  status course_status

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Ref: courses.category_id > categories.id


Table lessons {
  id uuid [pk]

  course_id uuid

  title varchar
  content text

  order_index int

  duration_minutes int

  created_at timestamp
}

Ref: lessons.course_id > courses.id


Table enrollments {
  id uuid [pk]

  user_id uuid
  course_id uuid

  progress int

  status enrollment_status

  created_at timestamp
}

Ref: enrollments.user_id > users.id
Ref: enrollments.course_id > courses.id


//////////////////////////////////////////////////////
// RESEARCH
//////////////////////////////////////////////////////

Table research_projects {
  id uuid [pk]

  title varchar
  description text

  type varchar

  start_date date
  end_date date

  status research_project_status

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}


Table research_papers {
  id uuid [pk]

  project_id uuid

  title varchar
  abstract text

  keywords json

  file_url varchar

  publication_date timestamp

  status paper_status

  created_at timestamp
  updated_at timestamp
}

Ref: research_papers.project_id > research_projects.id


//////////////////////////////////////////////////////
// KCS
//////////////////////////////////////////////////////

Table kcs_sections {
  id uuid [pk]

  code varchar [unique]
  name varchar

  description text

  order_number int

  created_at timestamp
  updated_at timestamp
}


Table scrolls {
  id uuid [pk]

  section_id uuid

  title varchar

  code varchar

  purpose text

  order_number int

  created_at timestamp
  updated_at timestamp
}

Ref: scrolls.section_id > kcs_sections.id


Table user_scrolls {
  id uuid [pk]

  user_id uuid
  section_id uuid

  title varchar

  content text

  visibility varchar

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Ref: user_scrolls.user_id > users.id
Ref: user_scrolls.section_id > kcs_sections.id


//////////////////////////////////////////////////////
// AI
//////////////////////////////////////////////////////

Table ai_conversations {
  id uuid [pk]

  user_id uuid

  question text
  answer text

  created_at timestamp
}

Ref: ai_conversations.user_id > users.id


//////////////////////////////////////////////////////
// ANALYTICS
//////////////////////////////////////////////////////

Table resource_views {
  id uuid [pk]

  user_id uuid
  resource_id uuid

  viewed_at timestamp
}

Ref: resource_views.user_id > users.id
Ref: resource_views.resource_id > resources.id


Table search_logs {
  id uuid [pk]

  user_id uuid

  keyword varchar

  searched_at timestamp
}

Ref: search_logs.user_id > users.id


//////////////////////////////////////////////////////
// NOTIFICATIONS
//////////////////////////////////////////////////////

Table notifications {
  id uuid [pk]

  user_id uuid

  title varchar
  body text

  is_read boolean

  notification_type notification_type

  created_at timestamp
}

Ref: notifications.user_id > users.id


//////////////////////////////////////////////////////
// AUDIT LOGS
//////////////////////////////////////////////////////

Table audit_logs {
  id uuid [pk]

  user_id uuid

  action audit_action

  entity varchar
  entity_id uuid

  metadata json

  created_at timestamp
}

Ref: audit_logs.user_id > users.id


//////////////////////////////////////////////////////
// REFRESH TOKENS
//////////////////////////////////////////////////////

Table refresh_tokens {
  id uuid [pk]

  user_id uuid

  token text

  expires_at timestamp

  created_at timestamp
}

Ref: refresh_tokens.user_id > users.id


//////////////////////////////////////////////////////
// ENUMS
//////////////////////////////////////////////////////

Enum account_status {
  ACTIVE
  SUSPENDED
  ARCHIVED
}

Enum resource_status {
  AVAILABLE
  ARCHIVED
  OUT_OF_STOCK
}

Enum borrow_status {
  PENDING
  APPROVED
  REJECTED
  ACTIVE
  RETURNED
  OVERDUE
}

Enum reservation_status {
  PENDING
  NOTIFIED
  CLAIMED
  EXPIRED
  CANCELLED
}

Enum fine_status {
  UNPAID
  PAID
  WAIVED
}

Enum publication_status {
  DRAFT
  SUBMITTED
  UNDER_REVIEW
  APPROVED
  REJECTED
  PUBLISHED
}

Enum course_status {
  DRAFT
  PUBLISHED
  ARCHIVED
}

Enum enrollment_status {
  ACTIVE
  COMPLETED
  DROPPED
}

Enum research_project_status {
  ACTIVE
  COMPLETED
  SUSPENDED
}

Enum paper_status {
  DRAFT
  SUBMITTED
  PUBLISHED
}

Enum notification_type {
  EMAIL
  IN_APP
}

Enum audit_action {
  LOGIN
  LOGOUT
  PASSWORD_RESET
  USER_CREATED
  ROLE_ASSIGNED
  BORROW_APPROVED
  PAYMENT_TRANSACTION
}